// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test should match snapshot 1`] = `
<div>
  Route
</div>
`;

exports[`Test should match snapshot 2`] = `
<div>
  Route
</div>
`;

exports[`Test should match snapshot 3`] = `
<div>
  <div>
    Param id: 41
    Foobar2
    Match 41
  </div>
</div>
`;

exports[`Test should match snapshot 4`] = `
<div>
  <div>
    Param id: 42
    Foobar2
    Match 42
  </div>
</div>
`;

exports[`Test should match snapshot 5`] = `
<div>
  Fallback
</div>
`;
